@@ -1,0 +1,47 @@
+# Testing Daisy
+We have three types of tests
+
+1. C++ unit tests (Only on Linux for now, depends on googletest)
+2. dai unit tests
+3. dai system tests
+
+## Running tests
+ctest is used to run all types of test. It is possible to run a single type of test by using ctests pattern matching. For example, to run only dai based unit test you would use
+
+    ctest -R dai_unit_test
+    
+## Writing tests
+
+### C++ unit tests
+C++ unit tests use `googletest`. They are in `cxx-unit-tests/tests`. They should be named `ut_<name-of-source-file-that-is-tested>.C` and should cover the entire source file and any functions defined in the corresponding header.
+
+A unit test is added to the test suite by adding to the end of `cxx-unit-tests/CMakeLists.txt` using the function `cxx_unit_test` with the signature
+
+    cxx_unit_test(test_file_name [extra_sources]*)
+    
+where `test_file_name` is the name of the test file without the file extension.
+
+A subset of Daisy is built as shared library that tests are linked against. If more sources are needed these are added as `extra_sources` in the `cxx_unit_test` function. For example,
+
+    cxx_unit_test(ut_scope_exchange 
+      ${CMAKE_SOURCE_DIR}/src/util/scope_exchange.C 
+      ${CMAKE_SOURCE_DIR}/src/util/scope_model.C
+    )
+
+### dai unit tests
+dai unit tests are in `dai-unit-tests/tests`. They should be named `test-<name>.dai` and should signal failure with a non-zero exit code and success with an exit code of zero. 
+
+A unit test is added to the test suite by adding it to the end of `dai-unit-tests/CMakeLists.txt` using the function `dai_unit_test` with the signature
+
+    dai_unit_test(name)
+    
+where `name` is the `<name>` part of the file name. Common dai files used for multiple tests can be placed `dai-unit-tests/tests/common` which is added to the Daisy path.
+
+### dai system tests
+dai unit tests are in `dai-system-tests/tests`. They should be named `test-<descriptive-name>.dai`. The output logs (.dlf) from running the test are compared against a baseline output in `dai-system-tests/baseline/<descriptive-name>`. Files that do not match the baseline during testing are copied to `dai-system-tests/errors/<descriptive-name>/error_*`. The baseline logs should be generated by manually running the test and verifying the output.
+
+A system test is added to the test suite by adding it to the end of `dai-system-tests/CMakeLists.txt` using the function `dai_system_test` with the signature
+
+    dai_system_test(name)
+    
+where `name` is the `<descriptive-name>` part of the file name. Common dai files used for multiple tests can be placed `dai-system-tests/tests/common` which is added to the Daisy path.
